--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 
@@ -57,10 +59,29 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
+    function playSound(e) {
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+      if (!audio) return
+      audio.currentTime = 0
+      audio.play()
+      
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+      key.classList.add("playing")
+    }
 
-</script>
+    function addAnimation(e) {
+      if (e.propertyName !== 'transform') return
+      this.classList.remove('playing')
+    }
+
+    window.addEventListener("keydown", playSound)
+    const keys = document.querySelectorAll('.key')
+    keys.forEach(k => k.addEventListener("transitionend", addAnimation))
+
+  </script>
 
 
 </body>
+
 </html>
